# ift6251

./: Cargo.toml  README.md
crates/ift6251/src/: cloud.rs  lib.rs  mandelbrot.rs
crates/ift6251/src/utils/: images.rs  mandelbrot.rs
crates/point-cloud-renderer/: Cargo.toml
crates/point-cloud-renderer/src/: lib.rs  loader.rs  point.rs
ift6251/: Cargo.toml
ift6251/src/: birds.rs  cloud.rs  mandelbrot.rs  particles.rs  triangles.rs
lib/: Cargo.toml
lib/src/: images.rs  lib.rs  mandelbrot.rs
paper/: main.typ  refs.bib
point-cloud-renderer/: Cargo.toml
point-cloud-renderer/src/: camera.rs  lib.rs  loader.rs  main.rs  pipeline.rs  point.rs  render.rs  scene.rs  screen.rs
point-cloud-renderer/src/shaders/: cloud.wgsl  compute.wgsl  render.wgsl
