[package]
name = "ift6251"
version = "0.1.0"
edition = "2021"
description = "A collection of projects created as part of the IFT6251 course at Université de Montréal."
authors = ["etiennecollin <collin.etienne.contact@gmail.com>"]
categories = ["nannou", "creative-coding", "algorithmic-art"]
readme = "README.md"
license = "MIT"

[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"

[[bin]]
name = "birds"
path = "src/birds.rs"

[[bin]]
name = "particles"
path = "src/particles.rs"
