[package]
name = "ift6251"
version = "0.1.0"
edition = "2024"
description = "A collection of projects created as part of the IFT6251 course at Université de Montréal."
authors = ["etiennecollin <collin.etienne.contact@gmail.com>"]
license = "MIT"

[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"
lib = { path = "../lib/" }
point-cloud-renderer = { path = "../point-cloud-renderer/" }
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["improved_unicode", "rayon"] }
nannou_audio = "0.19.0"
audrey = "0.3.0"
spectrum-analyzer = "1.6.0"

[[bin]]
name = "cloud"
path = "src/cloud.rs"

[[bin]]
name = "birds"
path = "src/birds.rs"

[[bin]]
name = "mandelbrot"
path = "src/mandelbrot.rs"

[[bin]]
name = "particles"
path = "src/particles.rs"

[[bin]]
name = "triangles"
path = "src/triangles.rs"
